# Time-Space-Trade-Offs-for-Computing-Euclidean-Minimum-Spanning-Trees

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
data/Aktuelle_Ergebnisse/: Delaunay_Triangulation.txt  Supovit_RNG.txt  zufaellige_Eingabepunkte.txt
docs/html/: _ass_edges_8cpp.html  _ass_edges_8cpp__incl.dot  _ass_edges_8hpp.html  _ass_edges_8hpp__dep__incl.dot  _ass_edges_8hpp__incl.dot  _ass_edges_8hpp_source.html  _ass_points_8cpp.html  _ass_points_8cpp__incl.dot  _ass_points_8hpp.html  _ass_points_8hpp__dep__incl.dot  _ass_points_8hpp__incl.dot  _ass_points_8hpp_source.html  _e_m_s_t_8cpp.html  _e_m_s_t_8cpp__incl.dot  _e_m_s_t_8hpp.html  _e_m_s_t_8hpp__dep__incl.dot  _e_m_s_t_8hpp__incl.dot  _e_m_s_t_8hpp_source.html  _edge_8cpp.html  _edge_8cpp__incl.dot  _edge_8hpp.html  _edge_8hpp__dep__incl.dot  _edge_8hpp__incl.dot  _edge_8hpp_source.html  _graph_8cpp.html  _graph_8cpp__incl.dot  _graph_8hpp.html  _graph_8hpp__dep__incl.dot  _graph_8hpp__incl.dot  _graph_8hpp_source.html  _point_8cpp.html  _point_8cpp__incl.dot  _point_8hpp.html  _point_8hpp__dep__incl.dot  _point_8hpp__incl.dot  _point_8hpp_source.html  _point_generation_8cpp.html  _point_generation_8hpp.html  (+66 more)
include/: AssEdges.hpp  AssPoints.hpp  Config.h.in  EMST.hpp  Edge.hpp  Graph.hpp  Point.hpp  PointGeneration.hpp  RNG.hpp  utils.hpp
src/: AssEdges.cpp  AssPoints.cpp  EMST.cpp  Edge.cpp  Graph.cpp  Point.cpp  PointGeneration.cpp  RNG.cpp  graph_visualizer.py  starterEMST.cpp  utils.cpp
test/: AssEdges.cpp  AssPoints.cpp  EMSTTest.cpp  EMSTTest.hpp  RNGTest.cpp  RNGTest.hpp  utils.cpp
(+157 files in other folders)
